# SKUD_v2

./: README.md  pyproject.toml
core/: requirements.txt
core/app_access_profile/: admin.py  apps.py  models.py
core/app_access_profile/migrations/: 0001_initial.py  0002_accessprofile_checpoint.py
core/app_card_pass/: admin.py  apps.py  models.py
core/app_card_pass/migrations/: 0001_initial.py  0002_alter_cardpass_staff.py  0003_alter_cardpass_pass_cart_hex_format.py  0004_alter_cardpass_activate_card.py  0005_alter_cardpass_activate_card_and_more.py  0006_alter_cardpass_pass_cart_hex_format_and_more.py  0007_alter_cardpass_staff.py  0008_alter_cardpass_pass_cart_hex_format.py  0009_alter_cardpass_pass_cart_hex_format.py  0010_alter_cardpass_pass_cart_hex_format.py  0011_alter_cardpass_pass_cart_hex_format.py  0012_alter_cardpass_pass_cart_hex_format.py  (+1 more)
core/app_checkpoint/: admin.py  apps.py  models.py
core/app_controller/: ControllerMiddelware.py  admin.py  forms.py  models.py
core/app_departament/: admin.py  apps.py  models.py
core/app_event/: EventMiddelware.py  admin.py  apps.py  models.py  serializers.py
core/app_monitor/: admin.py  apps.py  consumers.py  models.py  routing.py
core/app_photo_staff/: admin.py  apps.py  models.py
core/app_position/: admin.py  apps.py  models.py
core/app_shedule/: admin.py  apps.py  forms.py  models.py
core/app_staffs/: admin.py  apps.py  lookups.py  models.py
core/app_tag/: admin.py  apps.py  models.py
core/core/: BaseAdapter.py  ServicesMultiProc.py  asgi.py  base_views.py  settings.py  urls.py  utils.py
(+58 files in other folders)
