[tool.poetry]
name = "skud-v2"
version = "0.1.0"
description = ""
authors = ["RomanL91 <dev_roman91@mail.ru>"]
readme = "README.md"
packages = [{include = "skud_v2"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.7"
pillow = "^10.1.0"
aiohttp = "^3.9.0"
requests = "^2.31.0"
django-extensions = "^3.2.3"
channels = "3.0.5"
channels-redis = "3.3.1"
djangorestframework = "^3.14.0"
gunicorn = "^21.2.0"
uvicorn = {extras = ["standard"], version = "^0.25.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
